[gd_scene load_steps=31 format=3 uid="uid://woix6xsqnhck"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_3si7p"]
[ext_resource type="Script" path="res://common/states/state_machine.gd" id="1_mqe0a"]
[ext_resource type="Script" path="res://utilities/interaction/interact_ray.gd" id="1_u76sq"]
[ext_resource type="Script" path="res://game/player/player_data.gd" id="2_ykwb1"]
[ext_resource type="Texture2D" uid="uid://dvbw5jwhjs3o7" path="res://game/player/player_sprite.png" id="4_roix0"]
[ext_resource type="PackedScene" uid="uid://f501hq84juya" path="res://common/states/move/move_state.tscn" id="6_b7rel"]

[sub_resource type="Resource" id="Resource_5awrv"]
script = ExtResource("2_ykwb1")
guid = "Player"
name = "Player"
cell_name = ""
position = Vector3(0, 0, 0)
direction = Vector3(0, 0, -1)
gender = 0
pronoun0 = "She"
pronoun1 = "Her"
pet_species = 0
pet_breed = 0
experience = 0
health_current = 100
health_max = 100
stamina_current = 100
stamina_max = 100
mana_current = 100
mana_max = 100

[sub_resource type="Animation" id="Animation_jpgqi"]
resource_name = "RESET"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_abfwn"]
resource_name = "idle_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [18, 18, 18, 18, 18, 18]
}

[sub_resource type="Animation" id="Animation_50aug"]
resource_name = "idle_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.104973, 0.2, 0.3, 0.404973, 0.504973),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [12, 12, 12, 12, 12, 12]
}

[sub_resource type="Animation" id="Animation_4j65e"]
resource_name = "idle_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [0, 0, 0, 0, 0, 0]
}

[sub_resource type="Animation" id="Animation_moms8"]
resource_name = "idle_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.102487, 0.202487, 0.302487, 0.402487, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [6, 6, 6, 6, 6, 6]
}

[sub_resource type="Animation" id="Animation_xt72u"]
resource_name = "move_down"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_nf7dq"]
resource_name = "move_left"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_orqwr"]
resource_name = "move_right"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_gqfd2"]
resource_name = "move_up"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1.03526, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qkxdg"]
_data = {
"RESET": SubResource("Animation_jpgqi"),
"idle_down": SubResource("Animation_abfwn"),
"idle_left": SubResource("Animation_50aug"),
"idle_right": SubResource("Animation_4j65e"),
"idle_up": SubResource("Animation_moms8"),
"move_down": SubResource("Animation_xt72u"),
"move_left": SubResource("Animation_nf7dq"),
"move_right": SubResource("Animation_orqwr"),
"move_up": SubResource("Animation_gqfd2")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oo3l5"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j2mrg"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ohr4v"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_dj1uv"]
animation = &"idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7wsx7"]
blend_point_0/node = SubResource("AnimationNodeAnimation_oo3l5")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_j2mrg")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_ohr4v")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_dj1uv")
blend_point_3/pos = Vector2(0, -0.9)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a6q48"]
animation = &"move_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mmehw"]
animation = &"move_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cu10h"]
animation = &"move_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l6qto"]
animation = &"move_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_amhqa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_a6q48")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_mmehw")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_cu10h")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_l6qto")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_avhhh"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8m0y4"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_7wsx7")
states/Idle/position = Vector2(366, 87)
states/Move/node = SubResource("AnimationNodeBlendSpace2D_amhqa")
states/Move/position = Vector2(547, 87)
states/Start/position = Vector2(192, 82)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_avhhh")]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t4pw8"]

[node name="Player" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000701904, -0.0812302, -0.0119743)
script = ExtResource("1_3si7p")
data = SubResource("Resource_5awrv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qkxdg")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_8m0y4")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(0.0698836, -0.651064)
parameters/Move/blend_position = Vector2(-0.0083195, -0.531915)

[node name="CameraPivotY" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraPivotX" type="SpringArm3D" parent="CameraPivotY"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
spring_length = 10.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraPivotY/CameraPivotX"]
current = true

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_t4pw8")

[node name="InteractRay" type="RayCast3D" parent="."]
script = ExtResource("1_u76sq")

[node name="Rotor" type="Node3D" parent="."]

[node name="Sprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)
pixel_size = 0.1
shaded = true
texture_filter = 0
texture = ExtResource("4_roix0")
hframes = 60
frame = 18

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1_mqe0a")

[node name="MoveState" parent="StateMachine" instance=ExtResource("6_b7rel")]
body_path = NodePath("../..")

[node name="TargetMarker" type="MeshInstance3D" parent="."]
